WindGroup Dev/src/objects/Budget_Estimation_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Estimation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actual Estimation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Budget Estimation Entry</relationshipLabel>
        <relationshipName>Budget_Estimation_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Budget Estimation Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Equipment__c</columns>
        <columns>Budget_Amount__c</columns>
        <columns>Actual_Estimation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BEE-{000000}</displayFormat>
        <label>Budget Estimation Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Estimation Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>